# avr-simulator-rs

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile-linux  Makefile  angular.json  package-lock.json  package.json  todo.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/libs/bin_expr_parser_macro/: Cargo.toml
src-tauri/libs/bin_expr_parser_macro/src/: lib.rs
src-tauri/libs/bin_expr_parser_macro/tests/: test.rs
src-tauri/libs/deviceParser/: Cargo.toml  build.rs  utils.rs
src-tauri/libs/deviceParser/src/: lib.rs  main.rs  utils.rs
src-tauri/libs/deviceParser/src/struct/: avr_device_file.rs  device_address_space.rs  device_info.rs  device_interface.rs  device_interrupt.rs  mod.rs  (+4 more)
src-tauri/libs/deviceParser/struct/: avr_device_file.rs  common_registers.rs  device_address_space.rs  device_info.rs  device_interface.rs  device_interrupt.rs  device_package.rs  device_peripherals.rs  device_property_group.rs  mod.rs  module.rs
src-tauri/libs/device_parser/: Cargo.toml  build.rs  utils.rs
src-tauri/libs/device_parser/src/: lib.rs
src-tauri/libs/device_parser/struct/: avr_device_file.rs  common_registers.rs  device_address_space.rs  device_info.rs  device_interface.rs  device_interrupt.rs  device_package.rs  device_peripherals.rs  device_property_group.rs  module.rs
src-tauri/libs/opcodeGen/: Cargo.toml  build.rs
src-tauri/libs/opcodeGen/src/: lib.rs  opcode.def
src-tauri/libs/opcode_gen/: Cargo.toml  build.rs
src-tauri/libs/opcode_gen/src/: lib.rs  opcode.def
src-tauri/scripts/: install-vcredist.nsh  install-win.nsh
src-tauri/sql/: eeprom.sql  instruction.sql  project.sql
src-tauri/src/: commands.rs  constraint.rs  error.rs  instruction.rs  lib.rs  macros.rs  main.rs  menu.rs  operand.rs  parser.rs  project.rs
src-tauri/src/sim/: constraint.rs  controller.rs  core.rs  display.rs  gen_comment.rs  instruction.rs  memory.rs  mod.rs  operand.rs  parser.rs  register.rs  sim.rs  timing.rs  worker.rs
(+35 files in other folders)
