[package]
name = "avr-simulator-rs"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "avr_simulator_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.4", features = [ "tray-icon", "wry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.4.2"
device_parser = {path = "libs/device_parser" }
phf = { version = "0.13.1",features = ["macros"] }

opcode_gen = {path = "libs/opcode_gen" }
thiserror = { version = "2.0.12"}
strum = { version = "0.27.1", features = ["derive"] }
tauri-plugin-devtools = "2.0.0"
rusqlite  = {version = "0.37.0", features = ["bundled", "functions"] }
anyhow = { version = "1.0.100",features = ["backtrace"] }
bin_expr_parser_macro= {path = "libs/bin_expr_parser_macro" }
tokio = "1.48.0"
tauri-plugin-opener = "2"
